fix: x-overflow from embedded menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -1246,5 +1246,6 @@ footer .social-icon {
 }
 
 .embedded-menu {
+  width: 100%;
   max-width: 450px;
 }
